# better-fetch-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  deny.toml  lefthook.yml
.github/workflows/: ci.yml  fuzz.yml  release.yml
crates/api-fetch/: Cargo.toml  README.md
crates/api-fetch/src/: lib.rs
crates/better-fetch/: Cargo.toml
crates/better-fetch-macros/: Cargo.toml
crates/better-fetch-macros/src/: lib.rs
crates/better-fetch-tower/: Cargo.toml  README.md
crates/better-fetch-tower/src/: lib.rs
crates/better-fetch/benches/: url_build.rs
crates/better-fetch/proptest-regressions/: url_build.txt
crates/better-fetch/src/: api_response.rs  auth.rs  cancel.rs  client.rs  client_builder.rs  endpoint.rs  error.rs  hooks.rs  json_parser.rs  lib.rs  miette_diagnostic.rs  openapi.rs  otel.rs  path_params.rs  plugin.rs  prelude.rs  request.rs  request_pipeline.rs  response.rs  retry.rs  schema.rs  schema_validate.rs  sse.rs  streaming.rs  tower.rs  url_build.rs  validate_json.rs
crates/better-fetch/src/backend/: exec.rs  mod.rs  recording.rs  reqwest.rs
crates/better-fetch/src/openapi/: builder.rs  convert.rs  document.rs  mod.rs
crates/better-fetch/src/plugins/: logger.rs  mod.rs
crates/better-fetch/src/tower/: service.rs  stack.rs  trace.rs
crates/typed-fetch/: Cargo.toml  README.md
crates/typed-fetch/src/: lib.rs
docs/: ROADMAP.md  crates-io-publish.md  observability.md  testing.md
examples/: auth.rs  basic.rs  buffered_vs_streaming.rs  cancel.rs  hooks.rs  logger_plugin.rs  multipart.rs  needs_body.rs  openapi_export.rs  retry.rs  streaming.rs  throw_on_error.rs  tower_stack.rs  tower_vs_streaming.rs  typed_endpoint.rs  upload_stream.rs  validated_request.rs  validated_response.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: build_url.rs  parse_query.rs
reference/upstream-better-fetch/: NOTICE.md
tests/: api_response_tests.rs  auth_tests.rs  base_url_tests.rs  buffered_limit_tests.rs  builder_tests.rs  cancel_tests.rs  client_tests.rs  endpoint_compile_fail.rs  endpoint_macros_tests.rs  endpoint_register_tests.rs  endpoint_tests.rs  endpoint_typed_tests.rs  errors_tests.rs  form_tests.rs  hooks_error_context_tests.rs  hooks_tests.rs  http_edge_tests.rs  miette_diagnostic_tests.rs  multipart_tests.rs  pipeline_parity_tests.rs  plugin_init_tests.rs  plugin_tests.rs  query_order_tests.rs  query_serialize_tests.rs  readme_examples.rs  recording_tests.rs  request_validate_tests.rs  response_body_kind_tests.rs  retry_cancel_tests.rs  retry_edge_tests.rs  retry_tests.rs  retry_timing_tests.rs  schema_openapi_tests.rs  schema_tests.rs  schema_validate_tests.rs  sse_tests.rs  stream_to_file_tests.rs  streaming_tests.rs  streaming_tower_tests.rs  throw_tests.rs  (+5 more)
tests/endpoint_compile_fail/: missing_params.rs  missing_params.stderr  post_missing_body_manual.rs  post_missing_body_manual.stderr  stringly_param.rs  stringly_param.stderr  stringly_query_on_ready.rs  stringly_query_on_ready.stderr  stringly_query_pair.rs  stringly_query_pair.stderr
tests/endpoint_macros_compile_fail/: duplicate_param.rs  duplicate_param.stderr  extra_param_field.rs  extra_param_field.stderr  invalid_endpoint_path.rs  invalid_endpoint_path.stderr  invalid_path_no_colon.rs  invalid_path_no_colon.stderr  missing_param_field.rs  missing_param_field.stderr  post_missing_body.rs  post_missing_body.stderr  query_type_duplicate.rs  query_type_duplicate.stderr
tests/support/: mod.rs
