[package]
name = "better-fetch-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.better-fetch]
path = "../crates/better-fetch"
features = ["json", "rustls-tls"]

[[bin]]
name = "build_url"
path = "fuzz_targets/build_url.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_query"
path = "fuzz_targets/parse_query.rs"
test = false
doc = false
bench = false
