[package]
name = "better-fetch-tower"
description = "Tower transport integration for better-fetch (re-export crate)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
publish = true

[features]
default = []
tower-http = ["better-fetch/tower-http"]

[dependencies]
better-fetch = { path = "../better-fetch", version = "0.1.0", default-features = false, features = ["reqwest", "tower"] }

[lints]
workspace = true
