[package]
name = "better-fetch"
description = "Typed HTTP client layer on top of reqwest — inspired by @better-fetch/fetch"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"

[features]
default = ["json", "rustls-tls"]
json = ["dep:serde", "dep:serde_json", "reqwest/json"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
blocking = ["reqwest/blocking"]
## `RequestBuilder::multipart` (reqwest multipart body).
multipart = ["reqwest/multipart"]
cookies = ["reqwest/cookies"]
schema = ["dep:schemars", "dep:serde", "json"]
openapi = ["schema", "dep:serde", "json"]
tower = ["dep:tower", "rustls-tls"]
tower-http = ["tower", "dep:tower-http"]
macros = ["dep:better-fetch-macros"]
validate = ["json", "dep:garde"]
schema-validate = ["schema", "dep:jsonschema", "json"]
miette = ["dep:miette"]
## Server-Sent Events (`text/event-stream`) parsing on [`StreamingResponse`](crate::StreamingResponse).
sse = []
## Re-exports `opentelemetry`, `opentelemetry_sdk`, `tracing_opentelemetry` (no OTLP exporter bundled).
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]
## All common optional features for internal apps (`better_fetch::prelude` + full API surface).
full = [
    "json",
    "rustls-tls",
    "macros",
    "schema",
    "validate",
    "schema-validate",
    "miette",
    "otel",
    "tower",
    "multipart",
    "openapi",
    "sse",
]

[dependencies]
tokio = { version = "1", features = ["time", "sync", "macros"] }
tokio-util = { workspace = true }
fastrand = { workspace = true }
indexmap = { workspace = true }
base64 = "0.22"
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
percent-encoding = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
reqwest = { workspace = true, default-features = false }
schemars = { workspace = true, optional = true }
tower = { workspace = true, optional = true, features = ["util", "limit", "timeout", "buffer"] }
futures-util = { version = "0.3", default-features = true }
pin-project-lite = "0.2"
tower-http = { version = "0.6", optional = true, default-features = false, features = ["tower", "trace"] }
better-fetch-macros = { workspace = true, optional = true }
garde = { workspace = true, optional = true }
jsonschema = { version = "0.29", optional = true }
miette = { version = "7", optional = true }
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", optional = true, features = ["rt-tokio"] }
tracing-opentelemetry = { version = "0.28", optional = true }

[dev-dependencies]
tokio = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
wiremock = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = { workspace = true }
http = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
garde = { workspace = true, features = ["derive"] }
tower = { workspace = true, features = ["util", "limit"] }
proptest = { workspace = true }
trybuild = "1"
criterion = { workspace = true }
futures-util = { version = "0.3", default-features = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints]
workspace = true

[[test]]
name = "cancel_tests"
path = "../../tests/cancel_tests.rs"

[[test]]
name = "throw_tests"
path = "../../tests/throw_tests.rs"
required-features = ["json"]

[[test]]
name = "client_tests"
path = "../../tests/client_tests.rs"

[[test]]
name = "retry_tests"
path = "../../tests/retry_tests.rs"

[[test]]
name = "plugin_tests"
path = "../../tests/plugin_tests.rs"

[[test]]
name = "schema_openapi_tests"
path = "../../tests/schema_openapi_tests.rs"
required-features = ["openapi"]

[[test]]
name = "auth_tests"
path = "../../tests/auth_tests.rs"

[[test]]
name = "errors_tests"
path = "../../tests/errors_tests.rs"

[[test]]
name = "transport_error_tests"
path = "../../tests/transport_error_tests.rs"

[[test]]
name = "hooks_tests"
path = "../../tests/hooks_tests.rs"

[[test]]
name = "validate_tests"
path = "../../tests/validate_tests.rs"
required-features = ["validate"]

[[test]]
name = "tower_tests"
path = "../../tests/tower_tests.rs"
required-features = ["tower", "json"]

[[test]]
name = "endpoint_tests"
path = "../../tests/endpoint_tests.rs"
required-features = ["json"]

[[test]]
name = "schema_tests"
path = "../../tests/schema_tests.rs"
required-features = ["schema"]

[[test]]
name = "form_tests"
path = "../../tests/form_tests.rs"

[[test]]
name = "builder_tests"
path = "../../tests/builder_tests.rs"

[[test]]
name = "query_order_tests"
path = "../../tests/query_order_tests.rs"

[[test]]
name = "retry_edge_tests"
path = "../../tests/retry_edge_tests.rs"

[[test]]
name = "endpoint_typed_tests"
path = "../../tests/endpoint_typed_tests.rs"
required-features = ["json"]

[[test]]
name = "endpoint_macros_tests"
path = "../../tests/endpoint_macros_tests.rs"
required-features = ["json", "macros"]

[[test]]
name = "endpoint_compile_fail"
path = "../../tests/endpoint_compile_fail.rs"
required-features = ["json"]

[[test]]
name = "plugin_init_tests"
path = "../../tests/plugin_init_tests.rs"

[[test]]
name = "multipart_tests"
path = "../../tests/multipart_tests.rs"
required-features = ["multipart"]

[[test]]
name = "buffered_limit_tests"
path = "../../tests/buffered_limit_tests.rs"
required-features = ["json"]

[[test]]
name = "streaming_tests"
path = "../../tests/streaming_tests.rs"

[[test]]
name = "streaming_tower_tests"
path = "../../tests/streaming_tower_tests.rs"
required-features = ["tower"]

[[test]]
name = "http_edge_tests"
path = "../../tests/http_edge_tests.rs"

[[test]]
name = "pipeline_parity_tests"
path = "../../tests/pipeline_parity_tests.rs"

[[test]]
name = "query_serialize_tests"
path = "../../tests/query_serialize_tests.rs"
required-features = ["json"]

[[test]]
name = "base_url_tests"
path = "../../tests/base_url_tests.rs"
required-features = ["json"]

[[test]]
name = "recording_tests"
path = "../../tests/recording_tests.rs"
required-features = ["json"]

[[test]]
name = "response_body_kind_tests"
path = "../../tests/response_body_kind_tests.rs"
required-features = ["json"]

[[test]]
name = "stream_to_file_tests"
path = "../../tests/stream_to_file_tests.rs"

[[test]]
name = "sse_tests"
path = "../../tests/sse_tests.rs"
required-features = ["sse", "json"]

[[test]]
name = "hooks_error_context_tests"
path = "../../tests/hooks_error_context_tests.rs"

[[test]]
name = "retry_cancel_tests"
path = "../../tests/retry_cancel_tests.rs"

[[test]]
name = "retry_timing_tests"
path = "../../tests/retry_timing_tests.rs"

[[test]]
name = "upload_stream_tests"
path = "../../tests/upload_stream_tests.rs"

[[test]]
name = "request_validate_tests"
path = "../../tests/request_validate_tests.rs"
required-features = ["validate"]

[[test]]
name = "api_response_tests"
path = "../../tests/api_response_tests.rs"
required-features = ["json"]

[[test]]
name = "schema_validate_tests"
path = "../../tests/schema_validate_tests.rs"
required-features = ["schema-validate"]

[[test]]
name = "miette_diagnostic_tests"
path = "../../tests/miette_diagnostic_tests.rs"
required-features = ["miette"]

[[test]]
name = "endpoint_register_tests"
path = "../../tests/endpoint_register_tests.rs"
required-features = ["macros", "schema", "json"]

[[test]]
name = "readme_examples"
path = "../../tests/readme_examples.rs"
required-features = ["json"]

[[test]]
name = "url_edge_tests"
path = "../../tests/url_edge_tests.rs"
required-features = ["json"]

[[bench]]
name = "url_build"
harness = false
required-features = ["json"]

[[example]]
name = "tower_vs_streaming"
path = "../../examples/tower_vs_streaming.rs"
required-features = ["tower", "json"]

[[example]]
name = "throw_on_error"
path = "../../examples/throw_on_error.rs"
required-features = ["json"]

[[example]]
name = "cancel"
path = "../../examples/cancel.rs"

[[example]]
name = "buffered_vs_streaming"
path = "../../examples/buffered_vs_streaming.rs"
required-features = ["json"]

[[example]]
name = "streaming"
path = "../../examples/streaming.rs"
required-features = ["json"]

[[example]]
name = "basic"
path = "../../examples/basic.rs"
required-features = ["json"]

[[example]]
name = "typed_endpoint"
path = "../../examples/typed_endpoint.rs"
required-features = ["json"]

[[example]]
name = "hooks"
path = "../../examples/hooks.rs"
required-features = ["json"]

[[example]]
name = "logger_plugin"
path = "../../examples/logger_plugin.rs"
required-features = ["json"]

[[example]]
name = "retry"
path = "../../examples/retry.rs"
required-features = ["json"]

[[example]]
name = "auth"
path = "../../examples/auth.rs"
required-features = ["json"]

[[example]]
name = "validated_response"
path = "../../examples/validated_response.rs"
required-features = ["validate"]

[[example]]
name = "tower_stack"
path = "../../examples/tower_stack.rs"
required-features = ["tower", "json"]

[[example]]
name = "multipart"
path = "../../examples/multipart.rs"
required-features = ["multipart"]

[[example]]
name = "openapi_export"
path = "../../examples/openapi_export.rs"
required-features = ["openapi"]

[[example]]
name = "upload_stream"
path = "../../examples/upload_stream.rs"
required-features = ["json"]

[[example]]
name = "validated_request"
path = "../../examples/validated_request.rs"
required-features = ["validate"]

[[example]]
name = "needs_body"
path = "../../examples/needs_body.rs"
required-features = ["macros", "json"]
